# C_Shell

./: README.md
Shell/: .mssh_history  .msshrc  CMakeLists.txt  Makefile  Makefile~  README.txt  README.txt~  cscd340hw8.c  cscd340hw8.c~  cscd340hw8.h  mssh
Shell/history/: history.c  history.c~  history.h
Shell/linkedlist/: genericData.h  linkedList.c  linkedList.c~  linkedList.h  listUtils.c  listUtils.h  requiredIncludes.h
Shell/myDir/: myDir.c  myDir.h
Shell/pipes/: pipes.c  pipes.h
Shell/process/: process.c  process.h
Shell/tokenize/: makeArgs.c
Shell/utils/: fileUtils.c  fileUtils.c~  fileUtils.h  myUtils.c
